# ldap-sync

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  config.sample.yaml  docker-compose.yaml  ldap-sync-cronjob.yaml
.config/: nextest.toml  starte2e.sh
.github/workflows/: docker.yml  release.yml  rust-workflow.yml
src/: config.rs  lib.rs  main.rs  source_ldap.rs  source_list.rs  sources.rs  user.rs  zitadel.rs
src/sources/: csv.rs  ldap.rs  mod.rs  ukt.rs
tests/: e2e.rs  test.rs
tests/environment/: config.template.yaml  config.yaml  docker-compose.yaml  test-setup.sh
tests/environment/certs/: client.crt  client.key  generate-certs.sh  server.crt  server.key  test-ldap-ca.crt  test-ldap-ca.key  test-ldap-ca.srl  test-ldap.crt  test-ldap.csr  test-ldap.key
tests/environment/files/: test-users.csv
tests/environment/ldap/: ldap-setup.sh
tests/environment/ldap-setup/: Dockerfile  ldap-setup.sh  testorg.ldif
tests/environment/test-setup/: Dockerfile
tests/environment/zitadel/: zitadel-config.yaml  zitadel-init.yaml
